--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "ai": "^2.2.6",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
