--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
