--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "ai": "^2.2.6",
-    "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
@@ -31,6 +30,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.7"
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "autoprefixer": "^10.4.15",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
