--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "mongodb": "^6.1.0",
     "next": "13.4.19",
     "openai": "^4.0.1",
     "openai-edge": "^1.2.2",
