--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/uuid": "^9.0.4",
     "autoprefixer": "^10.4.15",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4"
