--- a/package.json
+++ b/package.json
@@ -9,18 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.5.1",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
     "ai": "^2.2.6",
     "class-variance-authority": "^0.7.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
     "mongodb": "^6.1.0",
     "next": "13.4.19",
     "openai": "^4.0.1",
     "openai-edge": "^1.2.2",
-    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
@@ -28,14 +22,20 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.7.0",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/uuid": "^9.0.4",
     "autoprefixer": "^10.4.15",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.3",
+    "postcss": "^8.4.30",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4"
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "typescript": "^5.2.2"
   }
 }
