--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "mongodb": "^6.2.0",
     "next": "^14.0.1",
+    "next-themes": "^0.2.1",
     "openai": "^4.0.1",
     "openai-edge": "^1.2.2",
     "react": "18.2.0",
