--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "ai": "^2.2.6",
     "class-variance-authority": "^0.7.0",
