--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ai": "^2.2.30",
     "class-variance-authority": "^0.7.0",
     "mongodb": "^6.2.0",
+    "nanoid": "^5.0.7",
     "next": "^14.0.1",
     "next-themes": "^0.2.1",
     "openai-edge": "^1.2.2",
@@ -21,8 +22,7 @@
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "uuid": "^9.0.1"
+    "remark-math": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.7.0",
