--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "next analyzer"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
+    "@next/bundle-analyzer": "^14.2.2",
     "ai": "^2.2.30",
     "class-variance-authority": "^0.7.0",
     "mongodb": "^6.2.0",
@@ -17,10 +19,10 @@
     "next": "^14.0.1",
     "next-themes": "^0.2.1",
     "openai-edge": "^1.2.2",
+    "prism-react-renderer": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
-    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1"
   },
