--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@google/generative-ai": "^0.1.3",
     "@next/bundle-analyzer": "^14.2.2",
     "ai": "^2.2.30",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "mongodb": "^6.2.0",
     "nanoid": "^5.0.7",
     "next": "^14.0.1",
+    "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.2.1",
     "openai-edge": "^1.2.2",
     "prism-react-renderer": "^2.3.1",
@@ -24,9 +26,11 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1"
+    "remark-math": "^5.1.1",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.7.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
