--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "analyze": "next analyzer"
+    "analyze": "next analyzer",
+    "seed": "node -r dotenv/config ./scripts/seed.mjs"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
@@ -37,6 +38,7 @@
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/uuid": "^9.0.4",
     "autoprefixer": "^10.4.15",
+    "dotenv": "^16.4.5",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.3",
     "postcss": "^8.4.30",
