--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.2.1",
+    "next-view-transitions": "^0.1.1",
     "openai-edge": "^1.2.2",
     "prism-react-renderer": "^2.3.1",
     "react": "18.2.0",
