--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "seed": "node -r dotenv/config ./scripts/seed.mjs"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.17",
+    "@ai-sdk/openai": "^0.0.18",
     "@google/generative-ai": "^0.1.3",
-    "@next/bundle-analyzer": "^14.2.2",
-    "ai": "^2.2.30",
+    "ai": "^3.1.22",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "mongodb": "^6.2.0",
@@ -32,6 +33,7 @@
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.3",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.7.0",
     "@types/react": "^18.2.22",
