--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "seed": "node -r dotenv/config ./scripts/seed.mjs"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^0.0.43",
-    "@ai-sdk/google": "^0.0.17",
-    "@ai-sdk/openai": "^0.0.18",
+    "@ai-sdk/anthropic": "^1.1.17",
+    "@ai-sdk/google": "^1.1.25",
+    "@ai-sdk/openai": "^1.2.5",
     "ai": "^3.3.11",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -21,7 +21,7 @@
     "mongodb": "^6.2.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.3",
-    "next-auth": "^3.29.10",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.2.1",
     "next-view-transitions": "^0.1.1",
     "prism-react-renderer": "^2.3.1",
