--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ai": "^3.2.32",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.3.19",
     "mongodb": "^6.2.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.3",
