--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "node -r dotenv/config ./scripts/seed.mjs"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.43",
     "@ai-sdk/google": "^0.0.17",
     "@ai-sdk/openai": "^0.0.18",
     "ai": "^3.2.32",
