--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@ai-sdk/anthropic": "^0.0.43",
     "@ai-sdk/google": "^0.0.17",
     "@ai-sdk/openai": "^0.0.18",
-    "ai": "^3.2.32",
+    "ai": "^3.3.11",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.3.19",
     "mongodb": "^6.2.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.3",
-    "next-auth": "^5.0.0-beta.18",
+    "next-auth": "^3.29.10",
     "next-themes": "^0.2.1",
     "next-view-transitions": "^0.1.1",
     "prism-react-renderer": "^2.3.1",
@@ -30,6 +30,7 @@
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "shadcn": "^1.0.0",
     "zod": "^3.22.5"
   },
   "devDependencies": {
